Bug 115281 - Problems with Ctrl+`(Grave / QUOTELEFT) shortcut in the View menu
Summary: Problems with Ctrl+`(Grave / QUOTELEFT) shortcut in the View menu
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.3.0.3 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.3.0 target:7.2.0.0.beta2
Keywords:
: 112980 125592 (view as bug list)
Depends on:
Blocks: Main-Menu Shortcuts-Grave
  Show dependency treegraph
 
Reported: 2018-01-28 15:10 UTC by Yousuf Philips (jay) (retired)
Modified: 2021-07-05 06:29 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2018-01-28 15:10:19 UTC
Steps:
1. open calc
2. open view menu
3. look at shortcut for 'Show Formula'

on linux it displays 'Ctrl+grave', on windows it shows 'Ctrl' and on mac it show nothing

Version: 6.1.0.0.alpha0+
Build ID: ea89dabf8b6363972190a6b50c527c418d51c2c7
CPU threads: 2; OS: Linux 4.4; UI render: default; VCL: gtk2; 
Locale: en-US (en_US.UTF-8); Calc: group threaded
Comment 1 Xavier Van Wijmeersch 2018-01-28 16:29:36 UTC
confirm

Version: 5.3.1.2
Build ID: e80a0e0fd1875e1696614d24c32df0f95f03deb2
CPU Threads: 8; OS Version: Linux 4.14; UI Render: default; VCL: kde4; Layout Engine: new; 
Locale: nl-BE (en_US.UTF-8); Calc: group

Version: 5.4.4.2
Build ID: 2524958677847fb3bb44820e40380acbe820f960
CPU threads: 8; OS: Linux 4.14; UI render: default; VCL: kde4; 
Locale: nl-BE (en_US.UTF-8); Calc: group

Version: 5.4.5.0.0+
Build ID: ea5384c177dcaf96a951019ab6a026b884832592
CPU threads: 8; OS: Linux 4.14; UI render: default; VCL: kde4; 
Locale: nl-BE (en_US.UTF-8); Calc: group

Version: 6.0.1.0.0+
Build ID: 26dc825d9fe7fe6a4188fc6ef68bc801fc8db064
CPU threads: 8; OS: Linux 4.14; UI render: default; VCL: kde4; 
Locale: nl-BE (en_US.UTF-8); Calc: group

Version: 6.1.0.0.alpha0+
Build ID: 2d8f17565ebe867210f5769851d91b2e7b612a8f
CPU threads: 8; OS: Linux 4.14; UI render: default; VCL: kde4; 
Locale: nl-BE (en_US.UTF-8); Calc: group threaded

Version: 6.1.0.0.alpha0+
Build ID: ad9d70e73394b1d0d2c1e1e4584c8bc6f3a5d8b3
CPU threads: 8; OS: Linux 4.14; UI render: default; VCL: gtk3; 
Locale: nl-BE (en_US.UTF-8); Calc: group threaded
Comment 2 Yousuf Philips (jay) (retired) 2018-01-28 17:57:14 UTC
This bug is to fix the missing parts of the shortcut on windows and mac and bug 103388 is to fix the issue on linux.
Comment 3 Jacques Guilleron 2018-01-29 11:33:28 UTC
Hi Yousuf,

I reproduce the isolated 'CTRL' since
LO 5.3.0.0.alpha1 Build ID: f4ca1573fcf445164c068c1046ab5d084e1b005f
Threads CPU : 2; Version de l'OS :Windows 6.1; UI Render : par défaut; 
Locale : fr-FR (fr_FR); Calc: CL
and upper versions.
Comment 4 QA Administrators 2019-03-19 03:49:41 UTC Comment hidden (obsolete)
Comment 5 V Stuart Foote 2019-03-19 04:01:20 UTC
Issue remains uncorrected with current master/6.3.0alpha0+

Version: 6.3.0.0.alpha0+
Build ID: ce01727e4d6779ea128aa1be09f4af8cad4e1854
CPU threads: 8; OS: Windows 10.0; UI render: GL; VCL: win; 
Locale: en-US (en_US); UI-Language: en-US
Calc: CL
Comment 6 V Stuart Foote 2019-05-30 13:02:59 UTC
*** Bug 125592 has been marked as a duplicate of this bug. ***
Comment 7 lol 2020-07-05 11:47:20 UTC
The problem is still present in

Version: 6.4.4.2 (x86)
Build-ID: 3d775be2011f3886db32dfd395a6a6d1ca2630ff
CPU-Threads: 2; BS: Windows 6.1 Service Pack 1 Build 7601; UI-Render: Standard; VCL: win; 
Gebietsschema: de-DE (de_DE); UI-Sprache: de-DE
Calc: threaded

and

Version: 7.0.0.0.beta2 (x64)
Build ID: 1c213561a365b5666167321de68c9977500c9612
CPU-Threads: 4; BS: Windows 10.0 Build 18362; UI-Render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: threaded

Only "Ctrl" is displayed as the shortcut.
Comment 8 Commit Notification 2021-06-17 07:47:09 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3bae5216881a2b8d84066a81b5e2f728675000f0

tdf#115281 sc Windows: fix shortcut text Ctrl+` in View menu

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2021-06-17 14:59:59 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/585f89d031d4ffd19fca70a5c6152c10cc46bc4d

tdf#115281 sc Windows: fix shortcut text Ctrl+` in View menu

It will be available in 7.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 NISZ LibreOffice Team 2021-06-24 13:17:22 UTC
*** Bug 112980 has been marked as a duplicate of this bug. ***
Comment 11 NISZ LibreOffice Team 2021-07-05 06:29:55 UTC
Verified in:
Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 0afa7e64d547a8f2a48402660acf5c95a468a0ab
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded