tdf#115281 sc Windows: fix shortcut text Ctrl+` in View menu

In View->Show Formula, shortcut text was only "Ctrl" instead
of the complete "Ctrl+`".

Change-Id: Icef8904bac0b663d9702e62fcdc0ab1f0f4bd1ee